[package]
name = "sacn"
description = "A Rust implementation of the ANSI E1.31 Streaming ACN protocol, tested against protocol version ANSI E1.31-2018."
version = "0.9.0"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>", "Paul Lancaster <paul@lancasterzone.com>"]
documentation = "https://github.com/RustLight/sacn"
repository = "https://github.com/RustLight/sacn"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustLight/sacn"
exclude = [
    "documentation/*",
    "further testing/*",
    ".github/*",
    ".travis.yml",
    ".gitignore",
]

[dependencies]
byteorder = { version = "1.2.2", features = [] }
net2 = { version = "0.2.31", optional = true }
heapless = { version = "0.5.3", optional = true }
socket2 = { version = "0.3.4", features = ["reuseport"] }
libc = { version = "0.2.67" } 

lazy_static = "1.4.0"
error-chain = "0.12.2"

uuid = { version = "0.6.3", features = ["use_std", "v4"] }

[features]
default = ["std"]
std = ["net2"]
unstable = ["heapless"]

[badges]
travis-ci = { repository = "Lan2u/RustSacn" }
