[package]
name = "sacn"
description = "A Rust implementation of the ANSI E1.31 Streaming ACN protocol, tested against protocol version ANSI E1.31-2018."
version = "0.10.0"
edition = "2024"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>", "Paul Lancaster <paul@lancasterzone.com>"]
documentation = "https://github.com/RustLight/sacn"
repository = "https://github.com/RustLight/sacn"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustLight/sacn"
exclude = [
    "documentation/*",
    "further testing/*",
    ".github/*",
    ".travis.yml",
    ".gitignore",
]

[dependencies]
byteorder = { version = "1.5.0", features = [] }
error-chain = "0.12.4"
libc = { version = "0.2.171" }
socket2 = { version = "0.5.9", features = ["all"] }
uuid = { version = "1.12", features = ["v4"] }

[dev-dependencies]
crossterm = "0.29.0"

[features]
default = ["std"]
std = []

[badges]
travis-ci = { repository = "Lan2u/RustSacn" }

[[examples]]
path = 'examples/sine-wave-sender.rs'
edition = '2024'
