[package]
name = "sacn"
description = "A Rust implementation of the ANSI E1.31 Streaming ACN protocol, tested against protocol version ANSI E1.31-2018."
version = "0.11.1"
edition = "2024"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = [
  "Lukas Schmierer <lukas.schmierer@lschmierer.de>",
  "Paul Lancaster <paul@lancasterzone.com>",
]
documentation = "https://github.com/RustLight/sacn"
repository = "https://github.com/RustLight/sacn"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustLight/sacn"
exclude = [
  "documentation/*",
  "further testing/*",
  ".github/*",
  ".travis.yml",
  ".gitignore",
]

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
libc = { version = "0.2.171" }
socket2 = { version = "0.6.1", features = ["all"], optional = true }
thiserror = { version = "2.0.0", default-features = false }
uuid = { version = "1.12", features = ["v4"], default-features = false }

[dev-dependencies]
crossterm = "0.29.0"
serial_test = { version = "3.2.0", features = ["file_locks"] }

[features]
default = ["std"]
std = ["dep:socket2", "uuid/std"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

[badges]
travis-ci = { repository = "Lan2u/RustSacn" }

[[example]]
name = 'simple-receiver'
path = 'examples/simple-receiver.rs'

[[example]]
name = 'sine-wave-sender'
path = 'examples/sine-wave-sender.rs'

[[example]]
name = 'demo_rcv'
path = 'examples/demo_rcv/src/main.rs'

[[example]]
name = 'demo_src'
path = 'examples/demo_src/src/main.rs'
