[package]
name = "sacn"
description = "Rust sACN implementation."
version = "0.4.4"
readme = "README.md"
keywords = ["acn", "sacn", "dmx"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
documentation = "https://docs.rs/sacn/"
repository = "https://github.com/lschmierer/sacn"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = { version = "1.2.2", features = [] }
net2 = { version = "0.2.31", optional = true }
heapless = { version = "0.2.7", optional = true }

[target.'cfg(feature = "std")'.dependencies]
uuid = { version = "0.6.3", features = ["use_std", "v4"] }

[target.'cfg(not(feature = "std"))'.dependencies]
uuid = { version = "0.6.3", features = ["v4"] }

[features]
default = ["std"]
std = ["net2"]
unstable = ["heapless"]

[badges]
travis-ci = { repository = "lschmierer/sacn" }
