[package]
name = "sacn-parse-fuzz-target"
version = "0.1.0"
authors = ["Paul <paul@lancasterzone.com>"]
edition = "2018"

# [workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = {version = "0.4.4"}
sacn = {path = "../Lib"}
